// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectPreview /> should render correctly project with participative step, without type 1`] = `
<Col
  bsClass="col"
  componentClass="div"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <div
    className="thumbnail  thumbnail--custom  block  block--bordered"
  >
    <ProjectCover
      project={
        Object {
          "hasParticipativeStep": true,
          "title": "project with participative step",
        }
      }
    />
    <ProjectPreviewBody
      project={
        Object {
          "hasParticipativeStep": true,
          "title": "project with participative step",
        }
      }
    />
    <ProjectPreviewCounters
      project={
        Object {
          "hasParticipativeStep": true,
          "title": "project with participative step",
        }
      }
    />
  </div>
</Col>
`;

exports[`<ProjectPreview /> should render correctly project without participative step (all projects have not participative steps) 1`] = `
<Col
  bsClass="col"
  componentClass="div"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <div
    className="thumbnail  thumbnail--custom  block  block--bordered"
  >
    <ProjectType
      project={
        Object {
          "hasParticipativeStep": false,
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step 2",
        }
      }
    />
    <ProjectCover
      project={
        Object {
          "hasParticipativeStep": false,
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step 2",
        }
      }
    />
    <ProjectPreviewBody
      project={
        Object {
          "hasParticipativeStep": false,
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step 2",
        }
      }
    />
  </div>
</Col>
`;

exports[`<ProjectPreview /> should render correctly project without participative step 1`] = `
<Col
  bsClass="col"
  componentClass="div"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <div
    className="thumbnail  thumbnail--custom  block  block--bordered"
  >
    <ProjectType
      project={
        Object {
          "hasParticipativeStep": false,
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step",
        }
      }
    />
    <ProjectCover
      project={
        Object {
          "hasParticipativeStep": false,
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step",
        }
      }
    />
    <ProjectPreviewBody
      project={
        Object {
          "hasParticipativeStep": false,
          "projectType": Object {
            "color": "#337ab7",
            "title": "presentation",
          },
          "title": "project without participative step",
        }
      }
    />
    <div
      style={
        Object {
          "height": "55px",
        }
      }
    >
       
    </div>
  </div>
</Col>
`;
